se agrego la pagina conexion.php

--- a/Html/Contacto.html
+++ b/Html/Contacto.html
@@ -15,6 +15,7 @@
             <li class="lista-nav"><a class="enlaces-nav" href="./index.html">Inicio</a></li>
             <li class="lista-nav"><a class="enlaces-nav" href="./nosotros.html"target="_blank">Nosotros</a></li>
             <li class="lista-nav"><a class="enlaces-nav" href="./Contacto.html">Contacto</a></li>
+            <li class="lista-nav"><a class="enlaces-nav" href="./registro.html">Contacto</a></li>
         </ul>
     </nav>
     <main id="main">
