--- a/Html/Nosotros.html
+++ b/Html/Nosotros.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-    <nav id="nav">
-        <ul class="enlaces-container">
-            <li class="lista-nav"><a class="enlaces-nav" href="./index.html">Inicio</a></li>
-            <li class="lista-nav"><a class="enlaces-nav" href="#">Nosotros</a></li>
-            <li class="lista-nav"><a class="enlaces-nav" href="./contacto.html" target="_blank">Contacto</a></li>
-        </ul>
+    <ul class="enlaces-container">
+        <li class="lista-nav"><a class="enlaces-nav" href="./index.html">Inicio</a></li>
+        <li class="lista-nav"><a class="enlaces-nav" href="./nosotros.html"target="_blank">Nosotros</a></li>
+        <li class="lista-nav"><a class="enlaces-nav" href="./Contacto.html">Contacto</a></li>
+        <li class="lista-nav"><a class="enlaces-nav" href="./registro.html">Contacto</a></li>
+    </ul>
     </nav>
     <main id="main">
         <section class="article">
