--- a/Html/Index.html
+++ b/Html/Index.html
@@ -13,10 +13,11 @@
 <body>
     <nav id="nav">
         <ul class="enlaces-container">
-            <li class="lista-nav"><a class="enlaces-nav" href="#">Inicio</a></li>
-            <li class="lista-nav"><a class="enlaces-nav" href="./Nosotros.html" target="_blank">Nosotros</a></li>
-            <li class="lista-nav"><a class="enlaces-nav" href="./contacto.html" target="_blank">Contacto</a></li>
-
+            <li class="lista-nav"><a class="enlaces-nav" href="./index.html">Inicio</a></li>
+            <li class="lista-nav"><a class="enlaces-nav" href="./nosotros.html"target="_blank">Nosotros</a></li>
+            <li class="lista-nav"><a class="enlaces-nav" href="./Contacto.html">Contacto</a></li>
+            <li class="lista-nav"><a class="enlaces-nav" href="./registro.html">Contacto</a></li>
+        </ul>
         </ul>
     </nav>
     <main id="main">
